[gd_scene load_steps=6 format=3 uid="uid://c1knb00ax4r0"]

[ext_resource type="Script" path="res://hud.gd" id="1_ba82m"]
[ext_resource type="FontFile" uid="uid://c4bwmdlkrseru" path="res://fonts/Xolonium-Regular.ttf" id="1_xlugh"]
[ext_resource type="Texture2D" uid="uid://btm5ooxijn37l" path="res://art/kirby.png" id="3_hy85v"]

[sub_resource type="InputEventAction" id="InputEventAction_kqnfn"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_a4pd8"]
events = [SubResource("InputEventAction_kqnfn")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_ba82m")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.5
offset_right = 22.5
offset_bottom = 78.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_xlugh")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MessageLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -120.0
offset_right = 240.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_xlugh")
theme_override_font_sizes/font_size = 64
text = "Dodge The Darrens!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -140.0
offset_right = 100.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_xlugh")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_a4pd8")
shortcut_feedback = false
shortcut_in_tooltip = false
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Credits" type="Button" parent="."]
offset_left = 1772.0
offset_top = 896.0
offset_right = 1885.0
offset_bottom = 957.0
shortcut_feedback = false
shortcut_in_tooltip = false
text = "Credits"
icon = ExtResource("3_hy85v")
alignment = 0

[connection signal="jeremy" from="." to="." method="play_jeremy"]
[connection signal="start_game" from="." to="." method="new_game"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="pressed" from="Credits" to="." method="_on_credits_pressed"]
